--- a/Task2/index2.html
+++ b/Task2/index2.html
@@ -26,7 +26,7 @@
             </div>
             <div>
                 <label for="username">Username</label>
-                <input type="text" id="username" placeholder="Enter Username" required pattern="^(?=.*[a-zA-Z])(?=.*\d)(?=.*[@#$%^&*])[A-Za-z\d@$!%*?&]{6,8}$">
+                <input type="text" id="username" placeholder="Enter Username" required pattern="^(?=.*\d)(?=.*[@#$%^&*])[A-Za-z\d@$!%*?&]{6,8}$">
             </div>
             <div>
                 <label for="password1">Password</label>
