made some corrections to task 2

--- a/Task2/index2.html
+++ b/Task2/index2.html
@@ -37,7 +37,7 @@
                 <input type="password" id="password2" placeholder="Confirm password" required>
             </div>
             <div>
-                <button onclick="myFunction()" type="submit" id="submit">Submit</button>
+                <button type="submit" id="submit">Submit</button>
             </div>   
     </form>
 
